style: fix overflow in blog

--- a/app/article.css
+++ b/app/article.css
@@ -18,7 +18,7 @@ body, .navbar {
 .article {
     padding: 10px;
     margin: 0 auto;
-    max-width: 650px;
+    max-width: 680px;
     color: #bcbfc9;
     --main-bg-color: rgb(59 77 86);
 }
